PairCluster added